# mHC-manifold-constrained-hyper-connections

./: README.md  handover.md  pyproject.toml
examples/nanogpt/: model.py  train.py
examples/nanogpt/config/: train_fineweb10B_cvres_mhc_48l.py  train_fineweb10B_mhc.py  train_fineweb10B_mhc_48l.py  train_fineweb10B_vres_mhc.py  train_fineweb10B_vres_mhc_48l.py
hyper_connections/: hyper_connections.py  hyper_connections_mhc.py
tests/: test_hyper_connections.py
